# jamjar

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Caddyfile  Dockerfile  docker-compose.yml  pyproject.toml
.claude/: settings.json
.claude/hooks/: auto-format-python.sh  block-binary-edits.sh  block-git-push.sh
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: work-item.md
.github/workflows/: ci.yml  deploy.yml  qa-cleanup.yml  qa-deploy.yml  qa-teardown.yml  security.yml
docs/: operations.md  pipeline.md  qa-deploy-vps-setup.md  roadmap.md
docs/superpowers/plans/: 2026-03-09-shareable-track-links.md  2026-03-12-invite-link-flow.md  2026-03-14-event-scheduling.md  2026-03-15-landing-page.md  2026-03-22-auto-track-detection.md  2026-03-22-qa-branch-deployments.md  2026-03-22-track-trimming.md  2026-03-23-agent-driven-development.md  2026-03-23-qa-deploys.md  2026-03-25-ios-app.md
docs/superpowers/specs/: 2026-03-09-shareable-track-links-design.md  2026-03-13-event-scheduling-design.md  2026-03-15-landing-page-design.md  2026-03-22-auto-track-detection-design.md  (+4 more)
ios/: .gitignore
scripts/: backup-db.sh  backup-to-r2.py  cleanup-local-recordings.sh  nuke-and-restart.sh  qa-deploy.sh  qa-teardown.sh  seed-db.py  server-health.sh  test-presigned-put.py  upload-references.sh
src/jam_session_processor/: api.py  auth.py  cli.py  config.py  db.py  email.py  fingerprint.py  metadata.py  output.py  splitter.py  storage.py  track_ops.py
tests/: conftest.py  test_api.py  test_api_share.py  test_auth.py  test_cli.py  test_config.py  test_db.py  test_db_share.py  test_fingerprint.py  test_invite.py  test_metadata.py  test_output.py  test_password_reset.py  test_remote_cleanup.py  test_splitter.py  test_storage.py  test_track_ops.py
web/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
web/src/: App.tsx  api.ts  index.css  main.tsx
web/tests/: auth.spec.ts  helpers.ts  sessions.spec.ts  tracks.spec.ts
(+70 files in other folders)
