[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jam-session-processor"
version = "0.1.0"
description = "Split iPhone jam session recordings into individual songs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "numpy>=1.26",
    "pydub>=0.25",
    "mutagen>=1.47",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.4",
]

[project.scripts]
jam-session = "jam_session_processor.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
