[build-system]
requires = ["setuptools>=68.0", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jam-session-processor"
version = "0.1.0"
description = "Split iPhone jam session recordings into individual songs"
requires-python = ">=3.11"
dependencies = [
    "click>=8.1",
    "pydub>=0.25",
    "mutagen>=1.47",
    "fastapi>=0.110",
    "python-multipart>=0.0.9",
    "uvicorn>=0.29",
    "requests>=2.31",
    "bcrypt>=4.0",
    "PyJWT>=2.12",
    "python-dotenv>=1.0",
    "boto3>=1.34",
    "cryptography>=44.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
    "httpx>=0.27",
]

[project.scripts]
jam-session = "jam_session_processor.cli:cli"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src/jam_session_processor --cov-report=term-missing"

[tool.coverage.run]
source = ["src/jam_session_processor"]
omit = ["tests/*"]

[tool.coverage.report]
fail_under = 75
show_missing = true
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "if TYPE_CHECKING:",
]
